@@ -41,6 +41,8 @@
 <%  if @dateext -%>
     dateext
     dateformat <%= @dateformat %>
+<%  else -%>
+    nodateext
 <%  end -%>
 <%  if @extension -%>
     extension <%= @extension %>
