@@ -12,6 +12,8 @@ compress
 <% if @dateext -%>
 dateext
 dateformat <%= @dateformat %>
+<%  else -%>
+nodateext
 <% end -%>
 <%
   (['/etc/logrotate.d'] + Array(@include_dirs)).flatten.each do |_dir|
